js/src/tests/test262/built-ins/Error/length.js
var
err1
=
Error
(
"
err
"
)
;
assert
.
sameValue
(
err1
.
constructor
.
length
1
'
The
value
of
err1
.
constructor
.
length
is
1
'
)
;
assert
.
sameValue
(
Error
.
constructor
.
length
1
'
The
value
of
Error
.
constructor
.
length
is
1
'
)
;
reportCompare
(
0
0
)
;
